@@ -73,13 +73,13 @@ FORMATION f_football {
 
 player {
   
-//  place p_wilderness;
-//  x     35;
-//  y     22;
+  place p_wilderness;
+  x     35;
+  y     22;
   
-        place p_empire_city;
-        x     42;
-        y     34;
+//        place p_empire_city;
+//        x     42;
+//        y     34;
 
   sprite    s_companion_wizard;
   speed     2;
