@@ -83,3 +83,5 @@ Changes for nazghul-0.1.2
   the message has repeated so far. Also changed the way "slow progress" and
   friends are reported so that it takes advantage of this feature.
 
+--Added a new character to Green Tower. Shroom the Hag owns the reagent shop.
+
